[gd_scene load_steps=7 format=3 uid="uid://cnhhyoj4lw6wg"]

[ext_resource type="Script" path="res://scripts/tank.gd" id="1_heloy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_47sri"]

[sub_resource type="BoxShape3D" id="BoxShape3D_smlwp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pa4tk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j5e2t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e0vwg"]

[node name="Tank" type="Node3D"]
script = ExtResource("1_heloy")

[node name="BackPanel" type="MeshInstance3D" parent="."]

[node name="LeftPanel" type="MeshInstance3D" parent="."]

[node name="RightPanel" type="MeshInstance3D" parent="."]

[node name="BottomPanel" type="MeshInstance3D" parent="."]

[node name="FrontPanel" type="MeshInstance3D" parent="."]

[node name="TankCollision" type="StaticBody3D" parent="."]

[node name="BackCollision" type="CollisionShape3D" parent="TankCollision"]
shape = SubResource("BoxShape3D_47sri")

[node name="LeftCollision" type="CollisionShape3D" parent="TankCollision"]
shape = SubResource("BoxShape3D_smlwp")

[node name="RightCollision" type="CollisionShape3D" parent="TankCollision"]
shape = SubResource("BoxShape3D_pa4tk")

[node name="BottomCollision" type="CollisionShape3D" parent="TankCollision"]
shape = SubResource("BoxShape3D_j5e2t")

[node name="FrontCollision" type="CollisionShape3D" parent="TankCollision"]
shape = SubResource("BoxShape3D_e0vwg")
